public struct Constants{
    public static string Mobile1ButtonString = "Jump";
    public static string Mobile2ButtonString = "Shoot";
    public static string m_FireButtonString = "Fire1";
    public static string JumpButtonString = "Jump";
    public static string InteractKeyString = "Interact";

    public static string m_ProjectileHolderString = "ProjectileHolder";
    public static string m_EnemyHolderString = "EnemyHolder";

    //Normal Controls
    public static string m_HorizontalAxisString = "Horizontal";
    public static string m_VerticalAxisString = "Vertical";

    public static string PlayerTag = "Player";
    public static string DestryoableTag = "Destroyable";
    //Sounds and Music 
    public static string LevelTheme = "Level1";
    public static string MainThemeName = "MainTitle";
    public static string FogMusic = "FogLoop";
    public static string BossMusic = "BossLoop";
    public static string WinMusic = "WinStinger";
    public static string LoseMusic = "LoseStinger";

    public static string PlayerDeath = "PlayerDeath";
    public static string PlayerHurt = "PlayerHurt";
    public static string PlayerJumpDouble = "PlayerJumpDouble";
    public static string PlayerJump = "PlayerJumpSingle";
    public static string PlayerLaserShot = "PlayerLaserShot";
    public static string PlayerMelee = "PlayerMelee";
    public static string PlayerBoxDestroy = "PlayerBoxDestroy";
    public static string PlayerHealthPickup = "PlayerHealthPickup";
    public static string PlayerItemPickup = "PlayerItemPickup";
    public static string PlayerTeleportIn = "PlayerTeleportIn";
    public static string PlayerTeleportOut = "PlayerTeleportOut";

    public static string GUI_Close = "GUI_Close";
    public static string GUI_Open = "GUI_Open";
    public static string GUI_Select = "GUI_Select";

    public static string Exit_Wall_Open = "ExitWallDoorOpen";

    public static string Enemy_TimeRift_Open = "EnemyTimeRiftOpen";
    public static string Enemy_TimeRift_Close = "EnemyTimeRiftClose";
    public static string EnemyHurt = "EnemyHurt";
    public static string EnemyDeath = "EnemyDeath";
    public static string EnemyLaserShot = "EnemyLaserShot";

    public static string BossAttack = "BossAttack";
    public static string BossDeath = "BossDeath";
    public static string BossHurt = "BossHurt";

    //Scenes 
    public static string MainScene = "Main_Menu";
    public static string Level1Scene = "Level_1";
    public static string BossScene = "Boss";
    public static string StoryScene = "Story";
    public static string WinScene = "Win";

    //Boss
    public static string BossLeftAttack = "LeftAttack";
    public static string BossRightAttack = "RightAttack";


    public static string IdleAnimationString = "Idle";
    public static string WalkingAnimationString = "Walking";
    public static string AttackAnimationString = "Attacking";
    public static string DeathAnimationString = "Dead";
    public static string HitAnimationString = "Hit";


    //Player Strings
    public static string PlayerFireAnimationString = "Shooting";
    public static string PlayerWalkingAnimationString = "X_Vel";
    public static string PlayerDeathAnimationString = "Alive";
    public static string PlayerEnterAnimationString = "Enter";
    public static string PlayerExitAnimationString = "Exit";
    public static string PlayerJumpAnimationString = "Jumping";

}
